--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!--
 
 =========================================================
-* Now UI Dashboard Angular - v1.2.0
+* Now UI dashboard Angular - v1.2.0
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/now-ui-dashboard-angular
@@ -24,15 +24,14 @@
     <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Now UI Dashboard Angular by Creative Tim</title>
+    <title>Now UI dashboard Angular by Creative Tim</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
     <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=kanit:400,700,200" rel="stylesheet" />
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=kanit:300,500,200" rel="stylesheet" />
+    <link href="./assets/vendor/@fortawesome/fontawesome-free/css/fontawesome.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
 
 </head>
