--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 <head>
     <base href='/'>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
-    <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/logo.png" />
+    <link rel="icon" type="image/png" href="./assets/img/logo.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Now UI dashboard Angular by Creative Tim</title>
