--- a/src/index.html
+++ b/src/index.html
@@ -15,29 +15,42 @@
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 
 -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <base href='/'>
+  <head>
+    <base href="/" />
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/logo.png" />
     <link rel="icon" type="image/png" href="./assets/img/logo.png" />
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Airforce</title>
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+      name="viewport"
+    />
     <meta name="viewport" content="width=device-width" />
 
-    <!--  Fonts and icons -->
-    <link href="./assets/vendor/@fortawesome/fontawesome-free/css/fontawesome.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
-
-</head>
-<body>
-  <app-root>
-  </app-root>
-</body>
-
-
+    <!--     Fonts and icons     -->
+    <link
+      href="https://fonts.googleapis.com/css?family=kanit:300,500,200"
+      rel="stylesheet"
+    />
+    <link
+      href="./assets/vendor/@fortawesome/fontawesome-free/css/fontawesome.min.css"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"
+    ></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
